--- a/apps/frontend/src/app/globals.css
+++ b/apps/frontend/src/app/globals.css
@@ -17,7 +17,7 @@
 }
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&family=Roboto:wght@100&display=swap');
 body {
-  
+  /* display: block; */
 }
 *{
   font-family: 'Poppins', sans-serif;
