--- a/apps/frontend/src/components/allchats/index.css
+++ b/apps/frontend/src/components/allchats/index.css
@@ -445,6 +445,14 @@ main.sign-up-mode .carousel {
   /* margin-left: var(--t); */
   place-self: end;
 }
+
+.user-list-item {
+  transition: transform 0.5s ease;
+}
+.move-up-animation {
+  transform: translateY(-100%);
+}
+
 ::-webkit-scrollbar {
   width: 0px; /* Adjust the width as needed */
 }
