--- a/apps/frontend/src/components/askAi/index.css
+++ b/apps/frontend/src/components/askAi/index.css
@@ -405,12 +405,12 @@ main.sign-up-mode .carousel {
   color:#000 !important;
 }
 
-.bubble {
+.bubbleAi {
   --r: 20px; /* the radius */
   --t: 10px; /* the size of the tail */
 
   
-  max-width: 500px;
+  max-width: 700px;
   padding: calc(2*var(--r)/3);
   -webkit-mask: 
     radial-gradient(var(--t) at var(--_d) 0,#0000 98%,#000 102%) 
