--- a/apps/frontend/src/components/askAi/index.css
+++ b/apps/frontend/src/components/askAi/index.css
@@ -1,6 +1,6 @@
-.active{
+/* .active {
     background-color: #1a46c9 !important;
-}
+} */
 .inputTagAskAi{
     width: 100% !important;
     height: 100% !important;
